--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /1941720062/JavaApplication8/nbproject/private/
 /1941720192/pertemuan2/nbproject/private/
+/1941720105/pertemuan2/nbproject/private/
+/1941720105/pertemuan2/build/
+/1941720105/Pertemuan3/nbproject/private/
+/1941720105/Pertemuan3/build/
