--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /1941720105/pertemuan2/build/
 /1941720105/Pertemuan3/nbproject/private/
 /1941720105/Pertemuan3/build/
+/1941720105/Pertemuan4/nbproject/private/
+/1941720105/Pertemuan4/build/
+/1941720105/Quiz_1/nbproject/private/
+/1941720105/Quiz_1/build/
+/1941720105/Pertemuan6/nbproject/private/
+/1941720105/Pertemuan6/build/
